--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,37 @@
 {
-  "name": "ui-map-bing",
-  "version": "0.0.0",
+  "author": "anypossiblew",
+  "name": "angular-ui-map-bing",
+  "version": "1.1.0",
+  "authors": [
+    "anypossiblew <anypossible.w@gmail.com>"
+  ],
+  "keywords": [
+    "angular",
+    "angularui",
+    "map",
+    "bing"
+  ],
+  "main": "./ui-map.js",
   "dependencies": {
-    "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
-    "bootstrap": "^3.2.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
+    "angular": "1.2.6",
     "angular-ui-utils": "event-0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
     "angular-scenario": "~1.3.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "ignore": [
+    "app",
+    "test",
+    ".idea",
+    ".bowerrc",
+    ".gitignore",
+    ".jshintignore",
+    ".jshintrc",
+    "gruntFile.js",
+    "package.json",
+    "publish.js",
+    "README.md"
+  ]
 }
